# icloud_drive_sync

./: .dockerignore  .gitignore  .mise.toml  .pdm-python  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.from_repo  Dockerfile.local  Dockerfile.pdm  Dockerfile.release  LICENSE  README.md  cron_script.sh.example  icloudds.py  pyproject.toml  requirements.txt  setup.py
icloudds/: authentication.py  autodelete.py  base.py  constants.py  database.py  download.py  email_notifications.py  exif_datetime.py  logger.py  paths.py
scripts/: build  build_docker  build_docker.from_repo  build_docker.local  docker_run.from_repo.sh  docker_run.local.sh  format  lint  release_docker  test
