[project]
name = "icloud_drive_sync"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Gordon Aspin", email = "gordon.aspin@gmail.com" }]
dependencies = [
    "build",
    "click==8.1.3",
    "piexif==1.1.3",
    "pyicloud @ git+https://github.com/gordonaspin/pyicloud@8e749fe26f8fee88843de53cda9a987ed0dff337",
    "requests==2.28.2",
    "setuptools==63.2.0",
    "tzlocal==4.2",
    "urllib3==1.26.14",
    "watchdog==2.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
