[project]
name = "icloudds"
version = "2.0.1"
description = "icloudds is a command-line tool to synchronize your iCloud Drive to the local filesystem."
authors = [{ name = "Gordon Aspin", email = "gordon.aspin@gmail.com" }]
dependencies = [
    "build",
    "click==8.1.3",
    "piexif==1.1.3",
#    "pyicloud @ git+https://github.com/gordonaspin/pyicloud@8e749fe26f8fee88843de53cda9a987ed0dff337",
    "pyicloud @ git+https://github.com/gordonaspin/pyicloud@786930c65f1f472db011c831fdaddb2ca5573df4",
    "requests==2.28.2",
    "setuptools==63.2.0",
    "tzlocal==4.2",
    "urllib3==1.26.14",
    "watchdog==2.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }
maintainers = [{ name = "Gordon Aspin", email="gordon.aspin@gmail.com" }]
classifiers=[
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
]

[project.scripts]
icloudds = "icloudds.base:main"

[project.urls]
Repository = "https://github.com/gordonaspin/icloud_drive_sync"

[tool.setuptools]
packages = ["icloudds"]

[tool.pdm]
distribution = false
