[project]
name = "icloudds"
version = "2.1.1"
description = "icloudds is a command-line tool to synchronize your iCloud Drive to the local filesystem."
authors = [{ name = "Gordon Aspin", email = "gordon.aspin@gmail.com" }]
dependencies = [
    "build",
    "click>=8.1.3",
    "piexif==1.1.3",
    "pyicloud @ git+https://github.com/timlaing/pyicloud.git",
    "requests>=2.31.0",
    "setuptools==63.2.0",
    "tzlocal==5.3.1",
    "urllib3==1.26.14",
    "watchdog==2.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }
maintainers = [{ name = "Gordon Aspin", email="gordon.aspin@gmail.com" }]
classifiers=[
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
]

[project.scripts]
icloudds = "icloudds.base:main"

[project.urls]
Repository = "https://github.com/gordonaspin/icloud_drive_sync"

[tool.setuptools]
packages = ["icloudds"]

[tool.pdm]
distribution = false
